--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,89 +49,89 @@ nav:
   - MicroSims:
     - Introduction: sims/index.md
     - Gallery: sims/gallery.md
-    - Learning Graph: 
+    - Learning Graph:
       - Intro: sims/learning-graph/index.md
       - sims/learning-graph-v1/index.md
       - sims/learning-graph-v1/01-course-description.md
       - sims/learning-graph-v1/02-concept-enumeration.md
       - sims/learning-graph-v1/03-concept-dependency.md
       - sims/learning-graph-v1/04-taxonomy.md
+    - 3D Sphere: sims/sphere/index.md
+    - 555 Timer: sims/555-timer/index.md
+    - 7 Segment Display: sims/seven-segment-display/index.md
+    - AC Circuit: sims/ac-circuit/index.md
+    - ALU: sims/alu/index.md
+    - Analog Circuits: sims/analog-circuit/index.md
+    - Analog Clock: sims/analog-clock/index.md
+    - Animated Wire: sims/animated-wire/index.md
+    - Background Grid: sims/background-grid/index.md
+    - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
+    - Bathtub: sims/bathtub/index.md
+    - Battery Drain: sims/battery-drain/index.md
+    - Battery Life: sims/battery-life/index.md
+    - Bee: sims/bee/index.md
+    - BFS vs DFS: sims/bfs-vs-dfs/index.md
+    - Binary Number: sims/binary-number/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
     - Bouncing Ball v2: sims/bouncing-ball/01-bounce.md
-    - Brownian Motion: sims/brownian-motion/index.md
-    - Circle: sims/circle/index.md
-    - Gold Star: sims/gold-star/index.md
-    - Polygon: sims/polygon/index.md
-    - Simple Tree: sims/simple-tree/index.md
-    - Recursion Tree: sims/recursion-tree/index.md
-    - Fractal Tree: sims/fractal-tree/index.md
-    - Lady Bug Walk: sims/lady-bug-walk/index.md
-    - Sine Wave: sims/sine-wave/index.md
-    - Canon: sims/canon/index.md
-    - BFS vs DFS: sims/bfs-vs-dfs/index.md
-    - String Harmonics: sims/string-harmonics/index.md
-    - Circuits: sims/circuits/index.md
-    - H-Bridge: sims/h-bridge/index.md
-    - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
-    - ALU: sims/alu/index.md
-    - Analog Clock: sims/analog-clock/index.md
-    - Fibonacci Clock: sims/fibonacci-clock/index.md
-    - Flower Petal Designer: sims/flower-petal/index.md
-    - Microphone Frequency Spectrum: sims/fft-mic/index.md
-    - Brownian Motion: sims/bouncing-ball/brownian-motion.md
-    - Conway's Game of Life: sims/conway/index.md
-    - Least Squares: sims/least-squares/index.md
-    - Binary Number: sims/binary-number/index.md
-    - Logic Gates: sims/logic-gates/index.md
-    - Motor: sims/motor/index.md
-    - Neural Network: sims/neural-network/index.md
-    - Pulse Width Modulation: sims/pwm/index.md
-    - 7 Segment Display: sims/seven-segment-display/index.md
-    - Supply and Demand: sims/supply-and-demand/index.md
-    - Wave Sum: sims/wave-sums/index.md
-    - Breadth First Search: sims/bfs/index.md
-    - Force Directed Graph: sims/force-directed-graph/index.md
-    - 3D Sphere: sims/sphere/index.md
-    - Sierpinski: sims/sierpinski/index.md
-    - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
-    - Robots: sims/robots/index.md
-    - Battery Drain: sims/battery-drain/index.md
-    - AC Circuit: sims/ac-circuit/index.md
-    - 555 Timer: sims/555-timer/index.md
     - Breadboard: sims/breadboard/index.md
-    - Particle Fields: sims/particle-fields/index.md
-    - Resize Test: sims/resize-test/index.md
-    - NeoPixel: sims/neopixel/index.md
-    - Bathtub: sims/bathtub/index.md
+    - Breadth First Search: sims/bfs/index.md
+    - Brownian Motion: sims/brownian-motion/index.md
+    - Brownian Motion v2: sims/bouncing-ball/brownian-motion.md
+    - Canon: sims/canon/index.md
+    - Circle: sims/circle/index.md
+    - Circuits: sims/circuits/index.md
+    - Circuits v2: sims/circuits/circuits-v2.md
+    - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
+    - Color Names: sims/color-names/index.md
+    - Conway's Game of Life: sims/conway/index.md
     - Curves: sims/curve/index.md
-    - Named Colors: sims/named-colors/index.md
+    - Data Element Mapper: sims/data-element-mapper/index.md
+    - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Flashcards: sims/flashcards/index.md
-    - Analog Circuits: sims/analog-circuit/index.md
-    - Animated Wire: sims/animated-wire/index.md
-    - Responsive Design: sims/responsive-design/index.md
-    - Background Grid: sims/background-grid/index.md
-    - Battery Life: sims/battery-life/index.md
-    - sims/circuits/circuits-v2.md
-    - sims/color-names/index.md
-    - sims/data-element-mapper/index.md
-    - sims/fourier/index.md
-    - sims/galton-board/index.md
-    - sims/maze-gen/index.md
-    - sims/slope-and-intercept/index.md
-    - sims/prisoners-dilemma/index.md
-    - sims/lissajous-figures/index.md
-    - Template: sims/template/index.md
-    - Sine and Cosine: sims/sine-and-cosine/index.md
-    - sims/rotating-gears/index.md
-    - sims/larson-scanner/index.md
-    - sims/pendulum/index.md
-    - Resize in iframe: sims/resize-in-iframe/index.md
-    - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
+    - Flower Petal Designer: sims/flower-petal/index.md
+    - Force Directed Graph: sims/force-directed-graph/index.md
+    - Fourier: sims/fourier/index.md
+    - Fractal Tree: sims/fractal-tree/index.md
+    - Galton Board: sims/galton-board/index.md
+    - Gold Star: sims/gold-star/index.md
+    - H-Bridge: sims/h-bridge/index.md
+    - Lady Bug Walk: sims/lady-bug-walk/index.md
+    - Larson Scanner: sims/larson-scanner/index.md
+    - Least Squares: sims/least-squares/index.md
+    - Lissajous Figures: sims/lissajous-figures/index.md
+    - Logic Gates: sims/logic-gates/index.md
+    - Maze Generator: sims/maze-gen/index.md
     - Maze Solver: sims/maze-solver/index.md
+    - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - Mobile Buttons: sims/mobile-buttons/index.md
-    - Bee: sims/bee/index.md
+    - Motor: sims/motor/index.md
+    - Named Colors: sims/named-colors/index.md
+    - NeoPixel: sims/neopixel/index.md
+    - Neural Network: sims/neural-network/index.md
+    - Particle Fields: sims/particle-fields/index.md
+    - Pendulum: sims/pendulum/index.md
+    - Polygon: sims/polygon/index.md
+    - Prisoners Dilemma: sims/prisoners-dilemma/index.md
+    - Pulse Width Modulation: sims/pwm/index.md
+    - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
+    - Recursion Tree: sims/recursion-tree/index.md
+    - Resize in iframe: sims/resize-in-iframe/index.md
+    - Resize Test: sims/resize-test/index.md
+    - Responsive Design: sims/responsive-design/index.md
+    - Robots: sims/robots/index.md
+    - Rotating Gears: sims/rotating-gears/index.md
+    - Sierpinski: sims/sierpinski/index.md
+    - Simple Tree: sims/simple-tree/index.md
+    - Sine and Cosine: sims/sine-and-cosine/index.md
+    - Sine Wave: sims/sine-wave/index.md
+    - Slope and Intercept: sims/slope-and-intercept/index.md
     - Snake: sims/snake/index.md
     - Solar Battery: sims/solar-battery/index.md
+    - String Harmonics: sims/string-harmonics/index.md
+    - Supply and Demand: sims/supply-and-demand/index.md
+    - Template: sims/template/index.md
+    - Wave Sum: sims/wave-sums/index.md
     - Ying Yang: sims/yang-yin/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
