--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,7 @@ nav:
     - Neural Network: sims/neural-network/index.md
     - Pulse Width Modulation: sims/pwm/index.md
     - 7 Segment Display: sims/seven-segment-display/index.md
+    - Star Rating: sims/star-rating/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Breadth First Search: sims/bfs/index.md
