--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
   - Why MicroSims:
     - Introduction: why/index.md
     - Motivation: why/motivation.md
+    - Uniqueness: why/uniqueness.md
     - Impact Analysis: why/impact-analysis.md
     - Deep Research: why/deep-research-final.md
   
