Added content on width responsive design

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
     - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
+    - Width-Responsive Design: chapters/width-responsive-design.md
     - MicroSim Metadata: chapters/describing-a-microsim.md
     - Advanced Topics: chapters/advanced-topics.md
     - Paper Steps: chapters/paper-steps.md
@@ -44,7 +45,7 @@ nav:
     - Basic Prompts: prompts/basic-prompts.md
   - Rules:
     - Introduction: rules/index.md
-    - Standard MicroSim Rules: rules/standard-rules.md
+    - Standard MicroSim Rules: rules/microsim-rules.md
     - Cursor Rule Loading: rules/cursor.md
   
   - MicroSims:
