--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
     - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Flower Petal Designer: sims/flower-petal/index.md
     - Microphone Frequency Spectrum: sims/fft-mic/index.md
+    - MicroSim Uniqueness: sims/microsim-uniqueness/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
