--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
     - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
+    - Development Workflow: chapters/microsim-dev-workflow.md
     - Width-Responsive Design: chapters/width-responsive-design.md
     - MicroSim Metadata: chapters/describing-a-microsim.md
     - Advanced Topics: chapters/advanced-topics.md
@@ -40,9 +41,7 @@ nav:
     - P5 Reference Manual: setup/p5-reference-manual.md
     - Paste As Markdown: setup/08-paste-as-markdown.md
     - Link Previews: setup/06-link-previews.md
-  - Prompts:
-    - Introduction: prompts/index.md
-    - Basic Prompts: prompts/basic-prompts.md
+  
   - Rules:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/microsim-rules.md
@@ -75,7 +74,6 @@ nav:
     - BFS vs DFS: sims/bfs-vs-dfs/index.md
     - Binary Number: sims/binary-number/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
-    - Bouncing Ball v2: sims/bouncing-ball/01-bounce.md
     - Breadboard: sims/breadboard/index.md
     - Breadth First Search: sims/bfs/index.md
     - Brownian Motion: sims/brownian-motion/index.md
@@ -137,6 +135,13 @@ nav:
     - Template: sims/template/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Ying Yang: sims/yang-yin/index.md
+  
+  - Sample GenAI Prompts:
+    - Introduction: prompts/index.md
+    - Basic Prompts: prompts/basic-prompts.md
+    - Design Framework: prompts/design-framework-chapter.md
+    - MicroSim Workflow: prompts/microsim-workflow.md
+  
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
