--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Motivation: why/motivation.md
     - Uniqueness: why/uniqueness.md
     - Impact Analysis: why/impact-analysis.md
+    - Learning Pyramid: why/learning-pyramid.md
     - Deep Research: why/deep-research-final.md
   
   - Formal Education Theory Chapters:
@@ -135,6 +136,11 @@ nav:
     - Template: sims/template/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Ying Yang: sims/yang-yin/index.md
+    - Book Generation Workflow: sims/book-gen-workflow/index.md
+             - sims/fft-mic-v2/index.md
+             - sims/pythagorean-theorem/index.md
+             - sims/solar-cell/index.md
+             - sims/yin-yang/index.md
   
   - Sample GenAI Prompts:
     - Introduction: prompts/index.md
