--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,6 +115,7 @@ nav:
     - Pendulum: sims/pendulum/index.md
     - Polygon: sims/polygon/index.md
     - Prisoners Dilemma: sims/prisoners-dilemma/index.md
+    - Projectile Motion: sims/projectile-motion/index.md
     - Pulse Width Modulation: sims/pwm/index.md
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
     - Recursion Tree: sims/recursion-tree/index.md
