--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
     - Development Workflow: chapters/microsim-dev-workflow.md
+    - Cognitive Load Theory: chapters/cognitive-load-theory.md
     - Width-Responsive Design: chapters/width-responsive-design.md
     - MicroSim Metadata: chapters/describing-a-microsim.md
     - Advanced Topics: chapters/advanced-topics.md
@@ -88,6 +89,8 @@ nav:
     - Conway's Game of Life: sims/conway/index.md
     - Curves: sims/curve/index.md
     - Data Element Mapper: sims/data-element-mapper/index.md
+    - FFT Butterfly: sims/fft-butterfly/index.md
+    - FFT Microphone: sims/fft-mic/index.md
     - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Flashcards: sims/flashcards/index.md
     - Flower Petal Designer: sims/flower-petal/index.md
