--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,7 +79,6 @@ nav:
     - Breadth First Search: sims/bfs/index.md
     - Brownian Motion: sims/brownian-motion/index.md
     - Brownian Motion v2: sims/bouncing-ball/brownian-motion.md
-    - Canon: sims/canon/index.md
     - Circle: sims/circle/index.md
     - Circuits: sims/circuits/index.md
     - Circuits v2: sims/circuits/circuits-v2.md
@@ -92,7 +91,8 @@ nav:
     - Flashcards: sims/flashcards/index.md
     - Flower Petal Designer: sims/flower-petal/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
-    - Fourier: sims/fourier/index.md
+    - Fourier Transform: sims/fourier/index.md
+    - FFT Microphone: sims/fft-mic-v2/index.md
     - Fractal Tree: sims/fractal-tree/index.md
     - Galton Board: sims/galton-board/index.md
     - Gold Star: sims/gold-star/index.md
@@ -117,6 +117,7 @@ nav:
     - Prisoners Dilemma: sims/prisoners-dilemma/index.md
     - Projectile Motion: sims/projectile-motion/index.md
     - Pulse Width Modulation: sims/pwm/index.md
+    - Pythagorean Theorem: sims/pythagorean-theorem/index.md
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Resize in iframe: sims/resize-in-iframe/index.md
@@ -131,18 +132,15 @@ nav:
     - Slope and Intercept: sims/slope-and-intercept/index.md
     - Snake: sims/snake/index.md
     - Solar Battery: sims/solar-battery/index.md
+    - Solar Cell: sims/solar-cell/index.md
     - Star Rating: sims/star-rating/index.md
     - String Harmonics: sims/string-harmonics/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Template: sims/template/index.md
     - Wave Sum: sims/wave-sums/index.md
-    - Ying Yang: sims/yang-yin/index.md
+    - Yin Yang: sims/yin-yang/index.md
     - Book Generation Workflow: sims/book-gen-workflow/index.md
-             - sims/fft-mic-v2/index.md
-             - sims/pythagorean-theorem/index.md
-             - sims/solar-cell/index.md
-             - sims/yin-yang/index.md
-  
+
   - Sample GenAI Prompts:
     - Introduction: prompts/index.md
     - Basic Prompts: prompts/basic-prompts.md
