--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,6 +119,7 @@ nav:
     - Polygon: sims/polygon/index.md
     - Prisoners Dilemma: sims/prisoners-dilemma/index.md
     - Projectile Motion: sims/projectile-motion/index.md
+    - Projectile Motion With Gravity: sims/projectile-motion-gravity/index.md
     - Pulse Width Modulation: sims/pwm/index.md
     - Pythagorean Theorem: sims/pythagorean-theorem/index.md
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
