--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
     - Development Workflow: chapters/microsim-dev-workflow.md
+    - Using Claude Skills to Generate MicroSims: chapters/using-claude-skill-to-generate-microsims.md
     - Cognitive Load Theory: chapters/cognitive-load-theory.md
     - Width-Responsive Design: chapters/width-responsive-design.md
     - MicroSim Metadata: chapters/describing-a-microsim.md
@@ -48,6 +49,7 @@ nav:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/microsim-rules.md
     - Cursor Rule Loading: rules/cursor.md
+    - Claude Skill: rules/claude-skill.md
   
   - MicroSims:
     - Introduction: sims/index.md
