--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
     - Named Colors: sims/named-colors/index.md
     - NeoPixel: sims/neopixel/index.md
     - Neural Network: sims/neural-network/index.md
+    - OODA Loop: sims/ooda/index.md
     - Particle Fields: sims/particle-fields/index.md
     - Pendulum: sims/pendulum/index.md
     - Polygon: sims/polygon/index.md
