--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -203,7 +203,9 @@ extra_javascript:
   # required for rendering math equations
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
+copyright: Copyright &copy; 2025 Dan McCreary. Licensed under <a href="license/">CC BY-NC-SA 4.0</a> for non-commercial use.
 extra:
+  generator: false
   analytics:
       provider: google
       property: G-BBR7MPK96Z
