--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,7 @@ nav:
     - Galton Board: sims/galton-board/index.md
     - Gold Star: sims/gold-star/index.md
     - H-Bridge: sims/h-bridge/index.md
+    - Icons: sims/icons/index.md
     - Lady Bug Walk: sims/lady-bug-walk/index.md
     - Larson Scanner: sims/larson-scanner/index.md
     - Least Squares: sims/least-squares/index.md
