--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,7 +49,7 @@ nav:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/microsim-rules.md
     - Cursor Rule Loading: rules/cursor.md
-    - Claude Skill: rules/claude-skill.md
+    - Claude Skills: rules/claude-skills/index.md
   
   - MicroSims:
     - Introduction: sims/index.md
@@ -81,10 +81,10 @@ nav:
     - Breadboard: sims/breadboard/index.md
     - Breadth First Search: sims/bfs/index.md
     - Brownian Motion: sims/brownian-motion/index.md
-    - Brownian Motion v2: sims/bouncing-ball/brownian-motion.md
     - Circle: sims/circle/index.md
     - Circuits: sims/circuits/index.md
     - Circuits v2: sims/circuits/circuits-v2.md
+    - Chemistry - Kinetic Molecular Theory: sims/chemistry/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Color Names: sims/color-names/index.md
     - Conway's Game of Life: sims/conway/index.md
@@ -101,6 +101,7 @@ nav:
     - Fractal Tree: sims/fractal-tree/index.md
     - Galton Board: sims/galton-board/index.md
     - Gold Star: sims/gold-star/index.md
+    - Koch Curve Fractal: sims/koch/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Icons: sims/icons/index.md
     - Lady Bug Walk: sims/lady-bug-walk/index.md
@@ -145,6 +146,7 @@ nav:
     - String Harmonics: sims/string-harmonics/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Template: sims/template/index.md
+    - Virus Spread Simulation: sims/virus/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Yin Yang: sims/yin-yang/index.md
     - Book Generation Workflow: sims/book-gen-workflow/index.md
