--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,14 @@ edit_uri: edit/master/docs/
 nav:
   - Home: index.md
   - About: about.md
+  - Course Description: course-description.md
+  - Learning Graph:
+    - Introduction: learning-graph/index.md
+    - Course Description Assessment: learning-graph/course-description-assessment.md
+    - Concept List: learning-graph/concept-list.md
+    - Concept Taxonomy: learning-graph/concept-taxonomy.md
+    - Quality Metrics: learning-graph/quality-metrics.md
+    - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
   - Why MicroSims:
     - Introduction: why/index.md
     - Motivation: why/motivation.md
@@ -17,20 +25,35 @@ nav:
     - Learning Pyramid: why/learning-pyramid.md
     - Deep Research: why/deep-research-final.md
   
-  - Formal Education Theory Chapters:
-    - Introduction: chapters/index.md
-    - Definition: chapters/what-is-a-microsim.md
-    - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
-    - Sample MicroSims: chapters/sample-microsims.md
-    - MicroSim Design: chapters/microsim-design.md
-    - Development Workflow: chapters/microsim-dev-workflow.md
-    - Using Claude Skills to Generate MicroSims: chapters/using-claude-skill-to-generate-microsims.md
-    - Cognitive Load Theory: chapters/cognitive-load-theory.md
-    - Width-Responsive Design: chapters/width-responsive-design.md
-    - MicroSim Metadata: chapters/describing-a-microsim.md
-    - Advanced Topics: chapters/advanced-topics.md
-    - Paper Steps: chapters/paper-steps.md
-    - References: chapters/references.md
+  - Chapters:
+    - Overview: chapters/index.md
+    - 1 - Introduction to Educational MicroSims: chapters/01-intro-to-educational-microsims/index.md
+    - 2 - Web Development Essentials: chapters/02-web-development-essentials/index.md
+    - 3 - Getting Started with p5.js: chapters/03-getting-started-with-p5js/index.md
+    - 4 - Drawing, Animation, and Color: chapters/04-drawing-animation-and-color/index.md
+    - 5 - Leveraging Generative AI: chapters/05-leveraging-generative-ai/index.md
+    - 6 - MicroSim Architecture and Layout: chapters/06-microsim-architecture-and-layout/index.md
+    - 7 - User Interface Controls and Events: chapters/07-user-interface-controls-and-events/index.md
+    - 8 - Responsive Design Techniques: chapters/08-responsive-design-techniques/index.md
+    - 9 - Bloom's Taxonomy and Learning Objectives: chapters/09-blooms-taxonomy-and-learning-objectives/index.md
+    - 10 - Charts, Diagrams, and Infographics: chapters/10-charts-diagrams-and-infographics/index.md
+    - 11 - Maps, Networks, and Timeline Visualizations: chapters/11-maps-networks-and-timeline-visualizations/index.md
+    - 12 - Metadata, Packaging, and Quality: chapters/12-metadata-packaging-and-quality/index.md
+    - 13 - Pedagogy, Assessment, and Accessibility: chapters/13-pedagogy-assessment-and-accessibility/index.md
+    - 14 - Professional Development and Capstone: chapters/14-professional-development-and-capstone/index.md
+    - Additional Resources:
+      - Definition: chapters/what-is-a-microsim.md
+      - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
+      - Sample MicroSims: chapters/sample-microsims.md
+      - MicroSim Design: chapters/microsim-design.md
+      - Development Workflow: chapters/microsim-dev-workflow.md
+      - Using Claude Skills: chapters/using-claude-skill-to-generate-microsims.md
+      - Cognitive Load Theory: chapters/cognitive-load-theory.md
+      - Width-Responsive Design: chapters/width-responsive-design.md
+      - MicroSim Metadata: chapters/describing-a-microsim.md
+      - Advanced Topics: chapters/advanced-topics.md
+      - Paper Steps: chapters/paper-steps.md
+      - References: chapters/references.md
   
   - Getting Started:
     - Quick Start: setup/index.md
