Generate final chapters, glossary and faq

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,8 @@ nav:
     - Concept Taxonomy: learning-graph/concept-taxonomy.md
     - Quality Metrics: learning-graph/quality-metrics.md
     - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
+    - Glossary Quality Report: learning-graph/glossary-quality-report.md
+    - FAQ Quality Report: learning-graph/faq-quality-report.md
   - Why MicroSims:
     - Introduction: why/index.md
     - Motivation: why/motivation.md
@@ -182,6 +184,7 @@ nav:
   
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
+  - FAQs: faqs.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
   - Creative Commons License: license.md
