--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ nav:
     - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
     - Glossary Quality Report: learning-graph/glossary-quality-report.md
     - FAQ Quality Report: learning-graph/faq-quality-report.md
+    - Quiz Quality Report: learning-graph/quiz-quality-report.md
+    - Skill Usage Report: learning-graph/skill-usage.md
   - Why MicroSims:
     - Introduction: why/index.md
     - Motivation: why/motivation.md
@@ -29,20 +31,48 @@ nav:
   
   - Chapters:
     - Overview: chapters/index.md
-    - 1 - Introduction to Educational MicroSims: chapters/01-intro-to-educational-microsims/index.md
-    - 2 - Web Development Essentials: chapters/02-web-development-essentials/index.md
-    - 3 - Getting Started with p5.js: chapters/03-getting-started-with-p5js/index.md
-    - 4 - Drawing, Animation, and Color: chapters/04-drawing-animation-and-color/index.md
-    - 5 - Leveraging Generative AI: chapters/05-leveraging-generative-ai/index.md
-    - 6 - MicroSim Architecture and Layout: chapters/06-microsim-architecture-and-layout/index.md
-    - 7 - User Interface Controls and Events: chapters/07-user-interface-controls-and-events/index.md
-    - 8 - Responsive Design Techniques: chapters/08-responsive-design-techniques/index.md
-    - 9 - Bloom's Taxonomy and Learning Objectives: chapters/09-blooms-taxonomy-and-learning-objectives/index.md
-    - 10 - Charts, Diagrams, and Infographics: chapters/10-charts-diagrams-and-infographics/index.md
-    - 11 - Maps, Networks, and Timeline Visualizations: chapters/11-maps-networks-and-timeline-visualizations/index.md
-    - 12 - Metadata, Packaging, and Quality: chapters/12-metadata-packaging-and-quality/index.md
-    - 13 - Pedagogy, Assessment, and Accessibility: chapters/13-pedagogy-assessment-and-accessibility/index.md
-    - 14 - Professional Development and Capstone: chapters/14-professional-development-and-capstone/index.md
+    - 1 - Introduction to Educational MicroSims:
+      - Chapter: chapters/01-intro-to-educational-microsims/index.md
+      - Quiz: chapters/01-intro-to-educational-microsims/quiz.md
+    - 2 - Web Development Essentials:
+      - Chapter: chapters/02-web-development-essentials/index.md
+      - Quiz: chapters/02-web-development-essentials/quiz.md
+    - 3 - Getting Started with p5.js:
+      - Chapter: chapters/03-getting-started-with-p5js/index.md
+      - Quiz: chapters/03-getting-started-with-p5js/quiz.md
+    - 4 - Drawing, Animation, and Color:
+      - Chapter: chapters/04-drawing-animation-and-color/index.md
+      - Quiz: chapters/04-drawing-animation-and-color/quiz.md
+    - 5 - Leveraging Generative AI:
+      - Chapter: chapters/05-leveraging-generative-ai/index.md
+      - Quiz: chapters/05-leveraging-generative-ai/quiz.md
+    - 6 - MicroSim Architecture and Layout:
+      - Chapter: chapters/06-microsim-architecture-and-layout/index.md
+      - Quiz: chapters/06-microsim-architecture-and-layout/quiz.md
+    - 7 - User Interface Controls and Events:
+      - Chapter: chapters/07-user-interface-controls-and-events/index.md
+      - Quiz: chapters/07-user-interface-controls-and-events/quiz.md
+    - 8 - Responsive Design Techniques:
+      - Chapter: chapters/08-responsive-design-techniques/index.md
+      - Quiz: chapters/08-responsive-design-techniques/quiz.md
+    - 9 - Bloom's Taxonomy and Learning Objectives:
+      - Chapter: chapters/09-blooms-taxonomy-and-learning-objectives/index.md
+      - Quiz: chapters/09-blooms-taxonomy-and-learning-objectives/quiz.md
+    - 10 - Charts, Diagrams, and Infographics:
+      - Chapter: chapters/10-charts-diagrams-and-infographics/index.md
+      - Quiz: chapters/10-charts-diagrams-and-infographics/quiz.md
+    - 11 - Maps, Networks, and Timeline Visualizations:
+      - Chapter: chapters/11-maps-networks-and-timeline-visualizations/index.md
+      - Quiz: chapters/11-maps-networks-and-timeline-visualizations/quiz.md
+    - 12 - Metadata, Packaging, and Quality:
+      - Chapter: chapters/12-metadata-packaging-and-quality/index.md
+      - Quiz: chapters/12-metadata-packaging-and-quality/quiz.md
+    - 13 - Pedagogy, Assessment, and Accessibility:
+      - Chapter: chapters/13-pedagogy-assessment-and-accessibility/index.md
+      - Quiz: chapters/13-pedagogy-assessment-and-accessibility/quiz.md
+    - 14 - Professional Development and Capstone:
+      - Chapter: chapters/14-professional-development-and-capstone/index.md
+      - Quiz: chapters/14-professional-development-and-capstone/quiz.md
     - Additional Resources:
       - Definition: chapters/what-is-a-microsim.md
       - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
