--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,17 +10,7 @@ nav:
   - Home: index.md
   - About: about.md
   - Course Description: course-description.md
-  - Learning Graph:
-    - Introduction: learning-graph/index.md
-    - Course Description Assessment: learning-graph/course-description-assessment.md
-    - Concept List: learning-graph/concept-list.md
-    - Concept Taxonomy: learning-graph/concept-taxonomy.md
-    - Quality Metrics: learning-graph/quality-metrics.md
-    - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
-    - Glossary Quality Report: learning-graph/glossary-quality-report.md
-    - FAQ Quality Report: learning-graph/faq-quality-report.md
-    - Quiz Quality Report: learning-graph/quiz-quality-report.md
-    - Skill Usage Report: learning-graph/skill-usage.md
+  
   - Why MicroSims:
     - Introduction: why/index.md
     - Motivation: why/motivation.md
@@ -211,7 +201,22 @@ nav:
     - Basic Prompts: prompts/basic-prompts.md
     - Design Framework: prompts/design-framework-chapter.md
     - MicroSim Workflow: prompts/microsim-workflow.md
+
+  - Learning Graph:
+    - Introduction: learning-graph/index.md
+    - Course Description Assessment: learning-graph/course-description-assessment.md
+    - Concept List: learning-graph/concept-list.md
+    - Concept Taxonomy: learning-graph/concept-taxonomy.md
+    - Quality Metrics: learning-graph/quality-metrics.md
+    - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
+    - Glossary Quality Report: learning-graph/glossary-quality-report.md
+    - FAQ Quality Report: learning-graph/faq-quality-report.md
+    - Quiz Quality Report: learning-graph/quiz-quality-report.md
+    - Diagram Table: learning-graph/diagram-table.md
+    - Diagram Details: learning-graph/diagram-details.md
+    - Skill Usage Report: learning-graph/skill-usage.md
   
+
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - FAQs: faqs.md
