--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ nav:
   - Rules:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/microsim-rules.md
+    - Design Patterns: rules/design-patterns.md
     - Cursor Rule Loading: rules/cursor.md
     - Claude Skills: rules/claude-skills/index.md
   
