--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,11 @@ nav:
   - MicroSims:
     - Introduction: sims/index.md
     - Gallery: sims/gallery.md
+    - Basic Microsims:
+      - Intro: sims/basic.md
+      - Bouncing Ball: sims/bouncing-ball/index.md
+      - Temperature and Pressure: sims/temp-and-pressure/index.md
+      - Sine Wave: sims/sine-wave/index.md
     - Learning Graph:
       - Intro: sims/learning-graph/index.md
       - sims/learning-graph-v1/index.md
