--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,6 +139,7 @@ nav:
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Color Names: sims/color-names/index.md
     - Conway's Game of Life: sims/conway/index.md
+    - Conway's Game of Life v2: sims/conway-game-of-life/index.md
     - Curves: sims/curve/index.md
     - Data Element Mapper: sims/data-element-mapper/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
