--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -164,6 +164,7 @@ nav:
     - Maze Generator: sims/maze-gen/index.md
     - Maze Solver: sims/maze-solver/index.md
     - Microphone Frequency Spectrum: sims/fft-mic/index.md
+    - MicroSim Layout: sims/microsim-layout/index.md
     - MicroSim Uniqueness: sims/microsim-uniqueness/index.md
     - Mobile Buttons: sims/mobile-buttons/index.md
     - Motor: sims/motor/index.md
