--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,7 @@ nav:
     - Lady Bug Walk: sims/lady-bug-walk/index.md
     - Larson Scanner: sims/larson-scanner/index.md
     - Least Squares: sims/least-squares/index.md
+    - Learning Modality Effectiveness: sims/learning-modality-effectiveness/index.md
     - Lissajous Figures: sims/lissajous-figures/index.md
     - Logic Gates: sims/logic-gates/index.md
     - Maze Generator: sims/maze-gen/index.md
