--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
     - Fractal Tree: sims/fractal-tree/index.md
     - Galton Board: sims/galton-board/index.md
     - Gold Star: sims/gold-star/index.md
+    - Global Impact: sims/global-impact/index.md
     - Koch Curve Fractal: sims/koch/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Icons: sims/icons/index.md
