--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,6 +168,7 @@ nav:
     - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - MicroSim Creation Workflow: sims/microsim-creation-workflow/index.md
     - MicroSim Layout: sims/microsim-layout/index.md
+    - MicroSim Library Ecosystem: sims/microsim-library-ecosystem/index.md
     - MicroSim Uniqueness: sims/microsim-uniqueness/index.md
     - Mobile Buttons: sims/mobile-buttons/index.md
     - Motor: sims/motor/index.md
@@ -224,9 +225,11 @@ nav:
     - Glossary Quality Report: learning-graph/glossary-quality-report.md
     - FAQ Quality Report: learning-graph/faq-quality-report.md
     - Quiz Quality Report: learning-graph/quiz-quality-report.md
+    - Quiz Generation Log: learning-graph/quiz-generation-session-log.md
     - Diagram Table: learning-graph/diagram-table.md
     - Diagram Details: learning-graph/diagram-details.md
     - Skill Usage Report: learning-graph/skill-usage.md
+    - Chapter Metrics: learning-graph/chapter-metrics.md
   
 
   - Submission Guidelines: submission-guidelines.md
