--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,11 +100,17 @@ nav:
   - MicroSims:
     - Introduction: sims/index.md
     - Gallery: sims/gallery.md
+    
     - Basic Microsims:
       - Intro: sims/basic.md
       - Bouncing Ball: sims/bouncing-ball/index.md
       - Temperature and Pressure: sims/temp-and-pressure/index.md
       - Sine Wave: sims/sine-wave/index.md
+      - Workflow Example: sims/microsim-creation-workflow/index.md
+      - Chart Example: sims/learning-modality-effectiveness/index.md
+      - Map Example: sims/global-impact/index.md
+      - Casual Loop Diagram Example: sims/microsim-growth/index.md
+    
     - Learning Graph:
       - Intro: sims/learning-graph/index.md
       - sims/learning-graph-v1/index.md
@@ -120,6 +126,7 @@ nav:
     - Analog Circuits: sims/analog-circuit/index.md
     - Analog Clock: sims/analog-clock/index.md
     - Animated Wire: sims/animated-wire/index.md
+    - A-Star Graph Search: sims/a-star/index.md
     - Background Grid: sims/background-grid/index.md
     - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
     - Bathtub: sims/bathtub/index.md
@@ -140,6 +147,7 @@ nav:
     - Color Names: sims/color-names/index.md
     - Conway's Game of Life: sims/conway/index.md
     - Conway's Game of Life v2: sims/conway-game-of-life/index.md
+    - CSS Box Model: sims/css-box-model/index.md
     - Curves: sims/curve/index.md
     - Data Element Mapper: sims/data-element-mapper/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
@@ -154,6 +162,7 @@ nav:
     - Galton Board: sims/galton-board/index.md
     - Gold Star: sims/gold-star/index.md
     - Global Impact: sims/global-impact/index.md
+    - Graph Viewer: sims/graph-viewer/index.md
     - Koch Curve Fractal: sims/koch/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Icons: sims/icons/index.md
@@ -167,6 +176,7 @@ nav:
     - Maze Solver: sims/maze-solver/index.md
     - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - MicroSim Creation Workflow: sims/microsim-creation-workflow/index.md
+    - MicroSim Growth: sims/microsim-growth/index.md
     - MicroSim Layout: sims/microsim-layout/index.md
     - MicroSim Library Ecosystem: sims/microsim-library-ecosystem/index.md
     - MicroSim Uniqueness: sims/microsim-uniqueness/index.md
