--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,8 @@ nav:
       - Temperature and Pressure: sims/temp-and-pressure/index.md
       - Sine Wave: sims/sine-wave/index.md
       - Workflow Example: sims/microsim-creation-workflow/index.md
+      - Sound Example: sims/string-harmonics/index.md
+      - Microphone Example: sims/fft-mic/index.md
       - Chart Example: sims/learning-modality-effectiveness/index.md
       - Map Example: sims/global-impact/index.md
       - Casual Loop Diagram Example: sims/microsim-growth/index.md
