--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ nav:
     - Basic Microsims:
       - Intro: sims/basic.md
       - Bouncing Ball: sims/bouncing-ball/index.md
+      - p5.js Coordinate System: sims/p5-coordinate-system/index.md
       - Temperature and Pressure: sims/temp-and-pressure/index.md
       - Sine Wave: sims/sine-wave/index.md
       - Workflow Example: sims/microsim-creation-workflow/index.md
