--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,6 +148,7 @@ nav:
     - Chemistry - Kinetic Molecular Theory: sims/chemistry/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Color Names: sims/color-names/index.md
+    - Color Wheel with Named Colors: sims/color-wheel-with-named-colors/index.md
     - Conway's Game of Life: sims/conway/index.md
     - Conway's Game of Life v2: sims/conway-game-of-life/index.md
     - CSS Box Model: sims/css-box-model/index.md
