--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,6 +158,7 @@ nav:
     - FFT Microphone: sims/fft-mic/index.md
     - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Flashcards: sims/flashcards/index.md
+    - Flex Layout Playground: sims/flex-layout-playground/index.md
     - Flower Petal Designer: sims/flower-petal/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
     - Fourier Transform: sims/fourier/index.md
