--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ nav:
       - Intro: sims/basic.md
       - Bouncing Ball: sims/bouncing-ball/index.md
       - p5.js Coordinate System: sims/p5-coordinate-system/index.md
+      - p5.js Animation Loop: sims/p5-animation-loop/index.md
       - Temperature and Pressure: sims/temp-and-pressure/index.md
       - Sine Wave: sims/sine-wave/index.md
       - Workflow Example: sims/microsim-creation-workflow/index.md
@@ -148,6 +149,7 @@ nav:
     - Chemistry - Kinetic Molecular Theory: sims/chemistry/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Color Names: sims/color-names/index.md
+    - Color Wheel Harmonies: sims/color-wheel/index.md
     - Color Wheel with Named Colors: sims/color-wheel-with-named-colors/index.md
     - Conway's Game of Life: sims/conway/index.md
     - Conway's Game of Life v2: sims/conway-game-of-life/index.md
@@ -200,6 +202,7 @@ nav:
     - Pulse Width Modulation: sims/pwm/index.md
     - Pythagorean Theorem: sims/pythagorean-theorem/index.md
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
+    - Rainbow Color Picker: sims/rainbow-color-picker/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Resize in iframe: sims/resize-in-iframe/index.md
     - Resize Test: sims/resize-test/index.md
@@ -214,6 +217,7 @@ nav:
     - Snake: sims/snake/index.md
     - Solar Battery: sims/solar-battery/index.md
     - Solar Cell: sims/solar-cell/index.md
+    - Spinning 3D Shapes: sims/spinning-3d-shapes/index.md
     - Star Rating: sims/star-rating/index.md
     - String Harmonics: sims/string-harmonics/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
