--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,7 +99,6 @@ nav:
   
   - MicroSims:
     - Introduction: sims/index.md
-    - Gallery: sims/gallery.md
     
     - Basic Microsims:
       - Intro: sims/basic.md
@@ -122,6 +121,8 @@ nav:
       - sims/learning-graph-v1/02-concept-enumeration.md
       - sims/learning-graph-v1/03-concept-dependency.md
       - sims/learning-graph-v1/04-taxonomy.md
+    
+    # Full list of Sorted MicroSims
     - 3D Sphere: sims/sphere/index.md
     - 555 Timer: sims/555-timer/index.md
     - 7 Segment Display: sims/seven-segment-display/index.md
@@ -139,14 +140,15 @@ nav:
     - Bee: sims/bee/index.md
     - BFS vs DFS: sims/bfs-vs-dfs/index.md
     - Binary Number: sims/binary-number/index.md
+    - Book Generation Workflow: sims/book-gen-workflow/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
     - Breadboard: sims/breadboard/index.md
     - Breadth First Search: sims/bfs/index.md
     - Brownian Motion: sims/brownian-motion/index.md
+    - Chemistry - Kinetic Molecular Theory: sims/chemistry/index.md
     - Circle: sims/circle/index.md
     - Circuits: sims/circuits/index.md
     - Circuits v2: sims/circuits/circuits-v2.md
-    - Chemistry - Kinetic Molecular Theory: sims/chemistry/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Color Names: sims/color-names/index.md
     - Color Wheel Harmonies: sims/color-wheel/index.md
@@ -158,30 +160,29 @@ nav:
     - Data Element Mapper: sims/data-element-mapper/index.md
     - FFT Butterfly: sims/fft-butterfly/index.md
     - FFT Microphone: sims/fft-mic/index.md
+    - FFT Microphone v2: sims/fft-mic-v2/index.md
     - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Flashcards: sims/flashcards/index.md
     - Flex Layout Playground: sims/flex-layout-playground/index.md
     - Flower Petal Designer: sims/flower-petal/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
     - Fourier Transform: sims/fourier/index.md
-    - FFT Microphone: sims/fft-mic-v2/index.md
     - Fractal Tree: sims/fractal-tree/index.md
     - Galton Board: sims/galton-board/index.md
-    - Gold Star: sims/gold-star/index.md
     - Global Impact: sims/global-impact/index.md
+    - Gold Star: sims/gold-star/index.md
     - Graph Viewer: sims/graph-viewer/index.md
-    - Koch Curve Fractal: sims/koch/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Icons: sims/icons/index.md
+    - Koch Curve Fractal: sims/koch/index.md
     - Lady Bug Walk: sims/lady-bug-walk/index.md
     - Larson Scanner: sims/larson-scanner/index.md
-    - Least Squares: sims/least-squares/index.md
     - Learning Modality Effectiveness: sims/learning-modality-effectiveness/index.md
+    - Least Squares: sims/least-squares/index.md
     - Lissajous Figures: sims/lissajous-figures/index.md
     - Logic Gates: sims/logic-gates/index.md
     - Maze Generator: sims/maze-gen/index.md
     - Maze Solver: sims/maze-solver/index.md
-    - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - MicroSim Creation Workflow: sims/microsim-creation-workflow/index.md
     - MicroSim Growth: sims/microsim-growth/index.md
     - MicroSim Layout: sims/microsim-layout/index.md
@@ -226,7 +227,6 @@ nav:
     - Virus Spread Simulation: sims/virus/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Yin Yang: sims/yin-yang/index.md
-    - Book Generation Workflow: sims/book-gen-workflow/index.md
 
   - Sample GenAI Prompts:
     - Introduction: prompts/index.md
