--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -223,6 +223,7 @@ nav:
     - String Harmonics: sims/string-harmonics/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Template: sims/template/index.md
+    - US State Quality Map: sims/us-state-quality-map/index.md
     - Temperature and Pressure: sims/temp-and-pressure/index.md
     - Virus Spread Simulation: sims/virus/index.md
     - Wave Sum: sims/wave-sums/index.md
