Refactor code structure for improved readability and maintainability

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -205,6 +205,7 @@ nav:
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
     - Rainbow Color Picker: sims/rainbow-color-picker/index.md
     - Recursion Tree: sims/recursion-tree/index.md
+    - Revenue Maximum: sims/revenue-maximum/index.md
     - Resize in iframe: sims/resize-in-iframe/index.md
     - Resize Test: sims/resize-test/index.md
     - Responsive Design: sims/responsive-design/index.md
