--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -226,6 +226,7 @@ nav:
     - Template: sims/template/index.md
     - US State Quality Map: sims/us-state-quality-map/index.md
     - Temperature and Pressure: sims/temp-and-pressure/index.md
+    - Terms to EKG: sims/terms-to-ekg/index.md
     - Virus Spread Simulation: sims/virus/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Yin Yang: sims/yin-yang/index.md
