complete redesign of the ALU MicroSim based on getting Claude to think like an instructional designer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,6 +127,7 @@ nav:
     - 555 Timer: sims/555-timer/index.md
     - 7 Segment Display: sims/seven-segment-display/index.md
     - AC Circuit: sims/ac-circuit/index.md
+    - AI Benchmarks Timeline: sims/ai-benchmarks-timeline/index.md
     - ALU: sims/alu/index.md
     - Analog Circuits: sims/analog-circuit/index.md
     - Analog Clock: sims/analog-clock/index.md
